<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    card_view:cardCornerRadius="14dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/top_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.65"
            android:contentDescription="@string/top_image"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:background="@color/bg_color"
            android:orientation="vertical"
            android:padding="@dimen/ten">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_margin_top"
                    android:lineSpacingExtra="@dimen/line_spacing"
                    android:textColor="@color/content_color"
                    android:textSize="@dimen/content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/highlight_text"
                    android:textColor="#88898C"
                    android:textSize="@dimen/highlight_text" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/sample"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15">

            <ImageView
                android:id="@+id/bottom_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/bottom_description"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/ten"
                android:layout_marginTop="@dimen/ten"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bottom_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/bottom_title" />

                <TextView
                    android:id="@+id/bottom_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bottom_title"
                    android:text="@string/bottom_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/ten" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>